<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


     <!--Caracteristicas del ToolBar establecido en la
                    aplicación-->
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimaryDark"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

     <!--PRIMER TextView para el título Información de CURP/ CURP INFORMATION  -->
    <TextView
        android:id="@+id/titlemain2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="@dimen/text25sp"
        android:text="@string/title_main2"
        android:textColor="#000000"
        android:layout_marginTop="@dimen/d80dp"/>


        <!--TextView del texto nombres/Names -->
        <TextView
            android:id="@+id/infoname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/d101dp"
            android:layout_marginTop="@dimen/d150dp"
            android:text="@string/textview_nombre"
            android:textSize="@dimen/text20sp" />

        <!--TextView donde se mostrará los nombres que el usuario haya ingresado -->
        <TextView
            android:id="@+id/datanames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/infoname"
            android:layout_marginStart="@dimen/d195dp"
            android:textSize="@dimen/text20sp"
            android:textColor="@color/colorBlack"/>

        <!--TextView del texto First Last Name/Apellido Paterno -->
        <TextView
            android:id="@+id/infofirstlastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/infoname"
            android:layout_below="@id/infoname"
            android:text="@string/textview_apellidopaterno"
            android:layout_marginTop="@dimen/d20dp"
            android:textSize="@dimen/text20sp" />

        <!--TextView donde se mostrará el apellido paterno ingresado por el usuario -->
        <TextView
            android:id="@+id/datafirstlastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/infofirstlastname"
            android:layout_marginStart="@dimen/d195dp"
            android:textSize="@dimen/text18sp"
            android:textColor="@color/colorBlack"/>

        <!--TextView del texto Second Last Name / Apellido Materno -->
        <TextView
            android:id="@+id/infosecondlastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/infoname"
            android:text="@string/textview_apellidomaterno"
            android:layout_below="@id/infofirstlastname"
            android:layout_marginTop="@dimen/d20dp"
            android:textSize="@dimen/text20sp" />

        <!--TextView donde se mostrará el apellido materno ingresado por el usuario -->
        <TextView
            android:id="@+id/datasecondlastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/infosecondlastname"
            android:layout_marginStart="@dimen/d195dp"
            android:textSize="@dimen/text18sp"
            android:textColor="@color/colorBlack"/>

        <!--TextView del texto gender/género -->
        <TextView
            android:id="@+id/infogender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/infoname"
            android:text="@string/textview_genero"
            android:layout_below="@id/infosecondlastname"
            android:layout_marginTop="@dimen/d20dp"
            android:textSize="@dimen/text20sp" />

        <!--TextView donde se mostrará el genero ingresado por el usuario -->
        <TextView
            android:id="@+id/datagender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/infogender"
            android:layout_marginStart="@dimen/d195dp"
            android:textSize="@dimen/text18sp"
            android:textColor="@color/colorBlack"/>

        <!--TextView del texto birthday / fecha de nacimiento -->
        <TextView
            android:id="@+id/infobirthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_fechanacimiento"
            android:layout_below="@id/infogender"
            android:layout_alignEnd="@id/infoname"
            android:layout_marginTop="@dimen/d20dp"
            android:textSize="@dimen/text18sp" />

        <!--TextView donde se almacenaará la fecha de nacimiento ingresada por el usuario -->
        <TextView
            android:id="@+id/databirthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/infobirthday"
            android:layout_marginStart="@dimen/d195dp"
            android:textSize="@dimen/text18sp"
            android:textColor="@color/colorBlack"/>

        <!--TextView del texto federal entity/entidad federativa -->
        <TextView
            android:id="@+id/infoentity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_entidadfederativa"
            android:layout_below="@id/infobirthday"
            android:layout_alignEnd="@id/infoname"
            android:layout_marginTop="@dimen/d20dp"
            android:textSize="@dimen/text20sp" />

        <!--TextView donde se almacenará la entidad federativa ingresada por el usuario -->
        <TextView
            android:id="@+id/dataentity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/infoentity"
            android:layout_marginStart="@dimen/d195dp"
            android:textSize="@dimen/text18sp"
            android:textColor="@color/colorBlack"/>

        <!--TextView del texto Your CURP is / Tu CURP es -->
        <TextView
            android:id="@+id/infogeneracionCurp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/generate_CURP"
            android:layout_below="@id/infoentity"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/d50dp"
            android:textSize="@dimen/text20sp"
            android:textColor="@color/colorBlack"/>

        <!--TextView donde aparecerá el CURP generado en base a los datos que el usuario
            ingreso-->
        <TextView
            android:id="@+id/generacionCURP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/infogeneracionCurp"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/d10dp"
            android:textSize="@dimen/text18sp"
            android:textColor="@color/colorPink"/>


        <!--ImagenView mostrada como alusiva al tema. -->

        <ImageView
            android:layout_width="@dimen/d101dp"
            android:layout_height="@dimen/d101dp"
            android:layout_below="@+id/generacionCURP"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/ContentDesc_imagen"
            android:src="@drawable/curp" />

    </RelativeLayout>
</ScrollView>